--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,9 @@
 	justify-content:space-between;
 	align-items:center;
 }
-.modal-header{
+.modal-header h2{
 	background-color: #50AC4F;
-	padding: 4px 8px;
+	padding: 16px;
 	color: #fff;
 }
 
